# Consumer-AI-Hackathon-London

./: .env  .gitignore  README.md  example-env  image_encoder.py  main.py  openai.py  pyproject.toml
bruno_api/: CLAIM.bru  HEALTH.bru  IMAGE.bru  USER.bru  bruno.json
frontend/: .env.example  .eslintrc.json  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: ConversationComponent.tsx  actions.ts  globals.css  layout.tsx  mockdata.ts  page.tsx
frontend/app/account_info/: AccountInfoPage.jsx  AccountInfoPage.tsx  page.tsx
frontend/app/api/: route.ts
frontend/app/api/claims/: route.ts
frontend/app/api/save-image-result/: route.ts
frontend/app/api/upload-image/: route.ts
frontend/app/api/users/: route.ts
frontend/app/chat/: ChatPage.tsx  actions.ts  globals.css  page.tsx
frontend/app/final_report/: ReportPage.tsx  actions.ts  page.tsx
frontend/app/picture_upload/: PhotoUploadPage.tsx  page.tsx  routes.ts
frontend/app/report/: ReportPage.tsx  page.tsx
frontend/app/start_claim/: VehicleSelectionPage.tsx  page.tsx
frontend/app/submit/: page.tsx
frontend/app/v1/: Button.tsx  Header.tsx  Icon.tsx  ImagePreview.tsx  IncidentReport.tsx  Input.tsx  Typography.tsx  UploadCard.tsx  globals.css  page.tsx
frontend/app/v2/: ConversationComponent.tsx  globals.css  layout.tsx  page.tsx
lambdas/: openai.py
openai/: image_encoder.py  pyproject.toml
openai/bruno_api/: HEALTH.bru
openai/bruno_api/environments/: SureSafe.bru
openai/lambdas/: authorizer.py
ui/: package-lock.json  package.json
utils/: logger.py
(+1 files in other folders)
