[tool.poetry]
name = "consumer-ai-hackathon-london"
version = "0.1.0"
description = ""
authors = ["Matt <matthewrharding@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
python-dotenv = "^1.0.1"
openai = "^1.54.3"
elevenlabs = "^1.12.1"
pyperclip = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
